# warehouse-vadini-client

./: .gitignore  Cargo.toml  Makefile  PKGBUILD  TODO.md  build.rs  config.json
.claude/: settings.local.json
assets/: warehouse.desktop
pkg/warehouse-vadini/: .BUILDINFO  .MTREE  .PKGINFO
src/: config.rs  images.rs  lib.rs  main.rs  sync.rs
src/api/: mod.rs  orders.rs  products.rs  templates.rs  users.rs
src/auth/: login.rs
src/db/: mod.rs  products.rs  schema.rs
src/models/: product.rs  user.rs
ui/: main.slint  types.slint
ui/components/: button.slint  dropdown.slint  filter.slint  nav.slint  onelineinput.slint  product-container.slint  suggest-input.slint
ui/style/: defaults.slint  icons.slint
ui/view/: cart.slint  catalog.slint  create.slint  login.slint  orders.slint  product-detail.slint  users.slint
wix/: License.rtf  main.wxs
