[package]
name = "Warehouse"
version = "0.1.0"
edition = "2021"


[dependencies]
slint = "1.14.1"
reqwest = { version = "0.12", features = ["cookies", "json", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["webp"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
rfd = "0.15"

[build-dependencies]
slint-build = "1.14.1"
image = "0.25"
winres = "0.1"

[package.metadata.deb]
name = "warehouse-vadini"
maintainer = "Vadini"
extended-description = "Warehouse management client for Vadini"
depends = "$auto"
section = "utils"
assets = [
    ["target/release/Warehouse", "usr/bin/warehouse-vadini", "755"],
    ["config.json", "usr/share/warehouse-vadini/config.json", "644"],
    ["Logo.png", "usr/share/icons/hicolor/256x256/apps/warehouse-vadini.png", "644"],
    ["assets/warehouse.desktop", "usr/share/applications/warehouse-vadini.desktop", "644"],
]

[package.metadata.android]
package = "ro.vadini.warehouse"
label = "Warehouse Vadini"
min_sdk_version = 28
target_sdk_version = 36
build_tools_version = "36.1.0"

[[package.metadata.android.uses-permission]]
name = "android.permission.INTERNET"
