[package]
name = "Warehouse"
version = "0.1.0"
edition = "2021"

[lib]
name = "warehouse"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "Warehouse"
path = "src/main.rs"
required-features = ["desktop"]

[features]
desktop = []

[dependencies]
slint = { version = "1.15.1", default-features = false, features = ["backend-winit", "renderer-femtovg", "renderer-software", "compat-1-2"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "blocking", "multipart", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["webp"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
slint = { version = "1.15.1", features = ["backend-android-activity-06", "compat-1-2"] }

[build-dependencies]
slint-build = "1.15.1"
image = "0.25"
winres = "0.1"

[package.metadata.deb]
name = "warehouse-vadini"
maintainer = "Vadini"
extended-description = "Warehouse management client for Vadini"
depends = "$auto"
section = "utils"
assets = [
    ["target/release/Warehouse", "usr/bin/warehouse-vadini", "755"],
    ["config.json", "usr/share/warehouse-vadini/config.json", "644"],
    ["Logo.png", "usr/share/icons/hicolor/256x256/apps/warehouse-vadini.png", "644"],
    ["assets/warehouse.desktop", "usr/share/applications/warehouse-vadini.desktop", "644"],
]

[package.metadata.android]
package = "ro.vadini.warehouse"
label = "Warehouse Vadini"
build_tools_version = "36.1.0"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 36

[package.metadata.android.signing.release]
path = "/home/hangoverhgv/.android/debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
